<?xml version="1.0"?>
<package>
  <name>llsf_msgs</name>
  <version>0.0.1</version>
  <description>Logistics League Protobuf Messages Package</description>
  <license>MIT</license>
  <maintainer email="florian.eith@web.de">Florian Eith</maintainer>
  <url type="website">https://github.com/ethflo/llsf_msgs</url>
  <author email="florian.eith@web.de">Florian Eith</author>  

  <buildtool_depend>catkin</buildtool_depend>
</package>
